--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
-<h2>hi, i have made 2 quiz as part of neogcamp assignment1(point1 and point2), and now as part of assignmnet2(point3) i have hosted those two quiz site with the help of netlify</h4>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hosted previous cli apps</title>
+</head>
+<body>
+    <h2>hi, i have made 2 quiz as part of neogcamp assignment1(point1 and point2), and now as part of assignmnet2(point3) i have hosted those two quiz site with the help of netlify</h4>
 
-<h3>quiz1</h3>
-<a href="https://vd-assignment1-quiz1-quizaboutme.netlify.app/"></a>
-<hr>
+        <h3>quiz1</h3>
+        <a href="https://vd-assignment1-quiz1-quizaboutme.netlify.app/">Tap here</a>
+        <hr>
+        
+        <h3>quiz2</h3>
+        <a href="https://vd-assignment1-quiz2-quizaboutseries.netlify.app">Tap here</a>
+        
+</body>
+</html>
 
-<h3>quiz2</h3>
-<a href="https://vd-assignment1-quiz2-quizaboutseries.netlify.app"></a>
+
 
 
 
